chandeliers-lus/tests/compile_fail/ui/options/not-applicable.stderr
error: Attribute #[main(nb_iter)] is not applicable to Const
 --> tests/compile_fail/ui/options/not-applicable.rs:2:5
  |
2 |     #[main]
  |     ^^^^^^^
